# miniwall_firewall_app

./: .gitignore  Cargo.toml  GNU GENRAL PUBLIC LICENSES.txt  build.rs  firewall.db  installer.nsi  readme.md
converters/: CMakeLists.txt  converter.c
src/: lib.rs  main.rs
src/daemon/: main.rs
src/utils/: database_n_model.rs  filtering_abstractions.rs  mod.rs
